@@ -1,3 +1,8 @@
+2012-11-25 Molnar Karoly <molnarkaroly AT users.sf.net>
+	* device/non-free/include/pic16/pic18f63j11.h,
+	  device/non-free/lib/pic16/libdev/pic18f63j11.c:
+	  Repaired wrong address of RCREG, 0x0FD0 --> 0x0FAE.
+
 2012-11-24 Borut Razem <borut.razem AT gmail.com>
 
 	* doc/sdccman.lyx: LyX format update to lyxformat 413, LyX 2.x.x
